cmake_minimum_required(VERSION 2.8) 
project(Scanline)
set(CMAKE_CXX_FLAGS "-std=c++17 -O3 -pg")
set(CMAKE_BUILD_TYPE "Release")
# set(CMAKE_CXX_FLAGS "-std=c++17 -O0")
# set(CMAKE_BUILD_TYPE "Debug")
find_package(Eigen3 REQUIRED) 
find_package(OpenCV 3 REQUIRED)
find_package(yaml-cpp REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIRS} ${YAML_CPP_INCLUDE_DIR})
include_directories("${CMAKE_SOURCE_DIR}/include")

add_executable(scanline src/main.cc src/model.cc src/utility.cc)
target_link_libraries(scanline ${OpenCV_LIBRARIES} ${YAML_CPP_LIBRARIES})
